--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
 <body>
 
     <div class="column-1">
-        <p><b>heka</b>
-            <br><br><br><br>
-            <a class="social" href="https://www.instagram.com/iamheka" target="_blank">&rarr; Instagram</a>
-            <br>
-            <a class="social" href="http://hekamusic.bandcamp.com/" target="_blank">&rarr; Bandcamp</a>
-            <br>
-            <a class="social" href="https://www.facebook.com/hekaproject" target="_blank">&rarr; Facebook</a>
-            <br>
-            <a class="social" href="https://www.twitter.com/iamheka" target="_blank">&rarr; Twitter</a>
-            <br>
-            <a class="social" href="https://open.spotify.com/artist/0pywJo7FyLovHMpmlIwWmL?si=QlA6QBrdRE6seprmR10vYQ" target="_blank">&rarr; Spotify</a>
-            <br>
-            <a class="social" href="https://www.youtube.com/c/hekamusic" target="_blank">&rarr; YouTube</a>
-            <br><br><br>
-
+        <div class="social-links">
+            <p><b>heka</b>
+                <br><br><br><br>
+                <a class="social" href="https://www.instagram.com/iamheka" target="_blank">&rarr; Instagram</a>
+                <br>
+                <a class="social" href="http://hekamusic.bandcamp.com/" target="_blank">&rarr; Bandcamp</a>
+                <br>
+                <a class="social" href="https://www.facebook.com/hekaproject" target="_blank">&rarr; Facebook</a>
+                <br>
+                <a class="social" href="https://www.twitter.com/iamheka" target="_blank">&rarr; Twitter</a>
+                <br>
+                <a class="social" href="https://open.spotify.com/artist/0pywJo7FyLovHMpmlIwWmL?si=QlA6QBrdRE6seprmR10vYQ" target="_blank">&rarr; Spotify</a>
+                <br>
+                <a class="social" href="https://www.youtube.com/c/hekamusic" target="_blank">&rarr; YouTube</a>
+                <br><br><br>
+        </div>
+        <div class="team">
             <b>Manager:</b>
             <br><br>
             Tobi Moore 
@@ -39,19 +41,30 @@
             <br>
             > Caius Williams <i>(double bass, bass guitar + pedals)</i> 
             <br><br><br>
+        </div>
 
-            <b>Upcoming shows:</b>
+        <div class="show-calendar"> <b>Upcoming shows:</b>
             <br><br>
             14th September @ The Waiting Room - supporting Yves Jarvis for Bird On The Wire
-            <br><br><br><br>• •<br><br><br>
-            <b>Download Visual Assets</b>
-            <br>
-            <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”>&rarr; here &larr;</a>
-            <br><br><br>
-            <b>Watch Live Videos</b>
-            <br>
-            <a href="https://youtube.com/playlist?list=PLSdkOC0WYO22STZqFrXGuaJw9FZUtl0Jn" target=”_blank”>&rarr; here &larr;</a>
-        </p>
+        </div>
+
+        <br><br><br>• •<br><br><br>
+
+        <div class="asset-links">
+            <p><b>Download Visual Assets</b>
+                <br>
+                <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”>&rarr; here &larr;</a>
+                <br><br><br>
+                <b>Download Tech Specs</b>
+                <br>
+                <a href="https://docs.google.com/document/d/1GjV6ToJtKZCdKaVZb6SqRvJ4mnX-0sMiJQnY85NaLEI/edit?usp=sharing">&rarr; here &larr;</a>
+                <br><br><br>
+                <b>Watch Live Videos</b>
+                <br>
+                <a href="https://youtube.com/playlist?list=PLSdkOC0WYO22STZqFrXGuaJw9FZUtl0Jn" target=”_blank”>&rarr; here &larr;</a>
+            </p>
+        </div>
+
     </div>
 
 
@@ -88,13 +101,13 @@
 
     <div class="column-3">
 
-       <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="press-shot-a" id="pic" src="visual-assets/(a) EP press shot.png"></a> 
+        <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="press-shot-a" id="pic" src="visual-assets/(a) EP press shot.png"></a>
 
 
         <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="press-shot-no-one" id="pic" src="visual-assets/heka_Fire Talk press shot.png"></a>
 
 
-            <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="press-shot-moth-club" id="pic" src="visual-assets/EBERT_HEKA_MODERN%20WOMAN_MOTH%20CLUB.jpg"></a>
+        <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="press-shot-moth-club" id="pic" src="visual-assets/EBERT_HEKA_MODERN%20WOMAN_MOTH%20CLUB.jpg"></a>
 
         <br><br>
         <p><b>Releases:</b></p>
@@ -112,7 +125,17 @@
 
     </div>
 
-
+<div class="mobile-footer">
+    <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”>&rarr; Download Visual Assets &larr;</a>
+    <br><br>
+        <a href="https://docs.google.com/document/d/1GjV6ToJtKZCdKaVZb6SqRvJ4mnX-0sMiJQnY85NaLEI/edit?usp=sharing">&rarr; Download Tech Specs &larr;</a>
+    <br><br>
+        <a href="https://youtube.com/playlist?list=PLSdkOC0WYO22STZqFrXGuaJw9FZUtl0Jn" target=”_blank”>&rarr; Watch Live Videos &larr;</a>
+    <br><br>
+            <a href="https://hekamusic.bandcamp.com/music" target=”_blank”>&rarr; Browse Releases &larr;</a>
+    
+    
+    </div>
 
 
 </body>
