--- a/index.html
+++ b/index.html
@@ -46,10 +46,19 @@
 
         <div class="show-calendar"> <b>Upcoming shows:</b>
             <br><br>
-            14th September @ The Waiting Room - supporting Yves Jarvis for Bird On The Wire
+            22nd September @ The Lexington, London - supporting Robocobra Quartet for Bad Vibrations
+            <br>
+            18th October @ The George Tavern, London
+            <br>
+            13th November @ Sonic City. Kortrijk, Belgium
+            <br>
+            14th November @ Cinetol. Amsterdam, NL
+            <br>
+            15th November @ Supersonic. Paris, France
+
         </div>
 
-        <br><br><br>• •<br><br><br>
+      <br>• •<br>
 
         <div class="asset-links">
             <p><b>Download Visual Assets</b>
@@ -126,16 +135,16 @@
 
     </div>
 
-<div class="mobile-footer">
-    <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”>&rarr; Download Visual Assets &larr;</a>
-    <br><br>
+    <div class="mobile-footer">
+        <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”>&rarr; Download Visual Assets &larr;</a>
+        <br><br>
         <a href="https://docs.google.com/document/d/1GjV6ToJtKZCdKaVZb6SqRvJ4mnX-0sMiJQnY85NaLEI/edit?usp=sharing">&rarr; Download Tech Specs &larr;</a>
-    <br><br>
+        <br><br>
         <a href="https://youtube.com/playlist?list=PLSdkOC0WYO22STZqFrXGuaJw9FZUtl0Jn" target=”_blank”>&rarr; Watch Live Videos &larr;</a>
-    <br><br>
-            <a href="https://hekamusic.bandcamp.com/music" target=”_blank”>&rarr; Browse Releases &larr;</a>
-    
-    
+        <br><br>
+        <a href="https://hekamusic.bandcamp.com/music" target=”_blank”>&rarr; Browse Releases &larr;</a>
+
+
     </div>
 
 
