--- a/index.html
+++ b/index.html
@@ -13,62 +13,62 @@
 <body>
 
     <div class="column-1">
-        <div class="social-links">
+        <div class="logo">
             <p><b>heka</b>
-                <br><br><br><br>
-                <a class="social" href="https://www.instagram.com/iamheka" target="_blank">&rarr; Instagram</a>
-                <br>
-                <a class="social" href="http://hekamusic.bandcamp.com/" target="_blank">&rarr; Bandcamp</a>
-                <br>
-                <a class="social" href="https://www.facebook.com/hekaproject" target="_blank">&rarr; Facebook</a>
-                <br>
-                <a class="social" href="https://www.twitter.com/iamheka" target="_blank">&rarr; Twitter</a>
-                <br>
-                <a class="social" href="https://open.spotify.com/artist/0pywJo7FyLovHMpmlIwWmL?si=QlA6QBrdRE6seprmR10vYQ" target="_blank">&rarr; Spotify</a>
-                <br>
-                <a class="social" href="https://www.youtube.com/c/hekamusic" target="_blank">&rarr; YouTube</a>
-                <br><br><br>
+
         </div>
-        <div class="team">
+
+        <div class="left-column-section">
+
+            <a class="social" href="https://www.instagram.com/iamheka" target="_blank">&rarr; Instagram</a>
+            <br>
+            <a class="social" href="http://hekamusic.bandcamp.com/" target="_blank">&rarr; Bandcamp</a>
+            <br>
+            <a class="social" href="https://www.facebook.com/hekaproject" target="_blank">&rarr; Facebook</a>
+            <br>
+            <a class="social" href="https://www.twitter.com/iamheka" target="_blank">&rarr; Twitter</a>
+            <br>
+            <a class="social" href="https://open.spotify.com/artist/0pywJo7FyLovHMpmlIwWmL?si=QlA6QBrdRE6seprmR10vYQ" target="_blank">&rarr; Spotify</a>
+            <br>
+            <a class="social" href="https://www.youtube.com/c/hekamusic" target="_blank">&rarr; YouTube</a>
+            <br><br><br>
+        </div>
+        <div class="left-column-section">
             <b>Manager:</b>
             <br><br>
             Tobi Moore 
             <br>
             <a href="mailto:tobi@thesapiensgroup.co.uk"><i>tobi@thesapiensgroup.co.uk</i></a>
-            <br><br><br>
-            <b>Live Band:</b>
-            <br><br>
-            > Pike Ogilvy <i>(drums, sample pad)</i>
             <br>
-            > Caius Williams <i>(double bass, bass guitar + pedals)</i> 
-            <br><br><br>
+        </div>
+        <div class="left-column-section">
+            <b>Upcoming Shows:</b>
+            <br><br>
+            03/06 ~ <i>Import Export</i>, Munich
+            <br>
+            07/06 ~ <i>La Boule Noire</i>, Paris
         </div>
 
-        <div class="show-calendar"> <b>Upcoming shows:</b>
-            <br><br>
+        <!--
+        <div class="show-calendar"> 
 
-            <br>
-            19th October @ The George Tavern, London
-            <br>
-            13th November @ Sonic City. Kortrijk, Belgium
-            <br>
-            14th November @ Cinetol. Amsterdam, NL
-            <br>
-            15th November @ Supersonic. Paris, France
+            <a href="https://www.songkick.com/artists/10081402" class="songkick-widget" data-theme="light" data-track-button="on" data-detect-style="on" data-locale="en" data-other-artists="on" data-share-button="on" data-country-filter="off" data-rsvp="on" data-request-show="on" data-past-events="off" data-past-events-offtour="off" data-remind-me="off"></a>
+            <script src='//widget-app.songkick.com/injector/10081402'></script>
 
         </div>
+-->
 
-      <br>• •<br>
-
-        <div class="asset-links">
+        <br>• •<br>
+        <br><br>
+        <div class="left-column-section">
             <p><b>Download Visual Assets</b>
                 <br>
                 <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”>&rarr; here &larr;</a>
-                <br><br><br>
+                <br><br>
                 <b>Download Tech Specs</b>
                 <br>
                 <a href="https://docs.google.com/document/d/1GjV6ToJtKZCdKaVZb6SqRvJ4mnX-0sMiJQnY85NaLEI/edit?usp=sharing">&rarr; here &larr;</a>
-                <br><br><br>
+                <br><br>
                 <b>Watch Live Videos</b>
                 <br>
                 <a href="https://youtube.com/playlist?list=PLSdkOC0WYO22STZqFrXGuaJw9FZUtl0Jn" target=”_blank”>&rarr; here &larr;</a>
@@ -79,7 +79,7 @@
 
 
     <div class="column-2">
-        <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="main" src="visual-assets/EBERT_HEKA_web_01_CROPPED.jpg"></a>
+        <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="main" src="visual-assets/SWAN SONGS Press shot.jpg"></a>
 
         <div class="sub-column-1">
 
@@ -93,36 +93,42 @@
                 <br><br>
                 <i>“(An EP) of intoxicating beauty, a mesmerising project that’s tied to the promise of bigger things to come.”</i>
                 <br>
-
                 <b>Our Culture </b>
                 <br><br>
                 <b>Bandcamp Record Of The Day</b>
                 <br><br>
                 <b>Featured on BBC Radio 1’s Chillest Show</b>
                 <br><br>
+                <b>Featured on BBC Radio 6’s Gilles Peterson Show</b>
+                <br><br>
                 <b>Featured in The Independent</b></p>
         </div>
         <div class=sub-column-2>
-            <p>Francesca Brierley - aka heka - is a multi-disciplinary artist, songwriter and producer from Florence, now based in London. <br>Deeply intimate and awash with melancholia, her style of lo-fi warmth incorporates snippets of conversations previously buried deep within the notes of her phone, blending murmurings of life with themes of love and loss, nostalgia and the everyday.<br><br>Rejecting genre constraints in favour of a sonic hybridity, 2021 saw her release (a), a collection of self-produced, butchered folk songs which, through the melding of electronic and organic tones, delivered an EP that is as haunting as it is enticing.  <br><br>Having toured the UK with the cult acclaimed White Flowers, as well as playing shows with the likes of Modern Woman, Broadside Hacks and Sean Nicholas Savage, heka is now organising her first EU tour with Spang Sisters, off the back of having been handpicked by BC,NR to play Sonic City Festival in Belgium in November.<br><br>
-                Her latest releases include: no one, a single for Open Tab, the new imprint by NY label FireTalk, and High Tide, a collaboration with London producer GG Skips (Sorry, Glows), featured on the ‘21 Slow Dance Compilation.</p>
+            <p>Francesca Brierley - aka heka - is a multi-disciplinary artist, songwriter and producer from Florence based in London. Deeply intimate and awash with melancholia, her style of lo-fi warmth incorporates snippets of conversations previously buried deep within the notes of her phone, blending murmurings of life with themes of love and loss, nostalgia and the everyday. Rejecting genre constraints, her self-produced "butchered folk" songs meld electronic and organic tones in favour of a sonic hybridity.
+                <br><br>
+                Having carved a name for herself in the underground indie scene over the last few years, heka has recently released a new EP via Practise Music (Squid, Martha Skye Murphy, Blue Bendy) and sold out her debut London headline.<br>Her work spans far outside the conventions of music with live performances featuring AI animated live projections and audio reactive stage design. She has gained coverage from the likes of PASTE, The i Paper, Fred Perry, and radio support from BBC Radio 1 and 6, Worldwide FM and NTS.
+                <br><br>
+                Picked by Black Country, New Road to play Sonic City Festival, other notable live shows include a UK tour with cult acclaimed White Flowers, as well as playing shows with the likes of Sam Burton, bar italia, Drug Store Romeos, Indigo Sparke and Saint Jude.
+                <br><br>
+                Having spent the past year crafting away on her live set up and scoring for some indie films, she is now working on her first studio album.
         </div>
 
     </div>
 
     <div class="column-3">
 
+        <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="press-shot-moth-club" id="pic" src="visual-assets/state51 pic.jpg"></a>
+
         <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="press-shot-a" id="pic" src="visual-assets/(a) EP press shot.png"></a>
 
-
-        <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="press-shot-no-one" id="pic" src="visual-assets/heka_Fire Talk press shot.png"></a>
-
-
         <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”><img class="press-shot-moth-club" id="pic" src="visual-assets/EBERT_HEKA_MODERN%20WOMAN_MOTH%20CLUB.jpg"></a>
+
 
         <br><br>
         <p><b>Releases:</b></p>
         <br>
 
+        <a href="https://hekamusic.bandcamp.com/album/swan-songs" target=”_blank”><img class="releases" src="visual-assets/final%20SWAN%20SONGS%20artwork.png"></a>
         <a href="https://firetalk.bandcamp.com/album/a-year-of-open-tab" target=”_blank”><img class="releases" src="visual-assets/OpenTab.jpeg"></a>
         <a href="https://brotherchid.bandcamp.com/album/bathtime-variety-hour-a-collection-of-covers-for-the-women-of-afghanistan" target=”_blank”><img class="releases" src="visual-assets/Bathtime.jpeg"></a>
         <a href="https://slowdancerecords.bandcamp.com/album/slow-dance-21" target=”_blank”><img class="releases" src="visual-assets/SLOW_DANCE.jpeg"></a>
