--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="mobile-footer">
         <a href="https://drive.google.com/drive/folders/1mfpSH2ZFhLpdM7w_8p_YvBPUtZD53PPa?usp=sharing" target=”_blank”>&rarr; Download Visual Assets &larr;</a>
         <br><br>
-        <a href="https://docs.google.com/document/d/1GjV6ToJtKZCdKaVZb6SqRvJ4mnX-0sMiJQnY85NaLEI/edit?usp=sharing">&rarr; Download Tech Specs &larr;</a>
+        <a href="https://docs.google.com/document/d/1GjV6ToJtKZCdKaVZb6SqRvJ4mnX-0sMiJQnY85NaLEI/edit?usp=sharing" target="_blank">&rarr; Download Tech Specs &larr;</a>
         <br><br>
         <a href="https://youtube.com/playlist?list=PLSdkOC0WYO22STZqFrXGuaJw9FZUtl0Jn" target=”_blank”>&rarr; Watch Live Videos &larr;</a>
         <br><br>
